<resources>
    <string name="app_name">OToHome</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>

    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>

    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>

    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="wrong_selection">wrong selection</string>

    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="send_otp">Send OTP</string>
    <string name="verification_code">Verification Code</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="please_enter_your_mobile_number_to_receive_a_verification_code">Please enter your mobile number to receive a verification code.</string>
    <string name="continue_button">CONTINUE</string>
    <string name="todo">TODO</string>
    <string name="verify_your_number">Verify Your Number</string>
    <string name="verify">VERIFY</string>
    <string name="something_wrong">Something Went wrong</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="calculator">Calculator</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logout">Logout</string>
    <string name="under_20km">under 20 km</string>
    <string name="_12000">select days first</string>
    <string name="buy_now">Buy Now</string>
    <string name="buy_package">Buy Package</string>
    <string name="enter_pickup_point">Enter pickup point</string>
    <string name="enter_drop_point">Enter drop point</string>
    <string name="address">Address</string>
    <string name="content_to_show_package">Hcl Technologies, Tower-2</string>
    <string name="content_from_show_package">Shipra Suncity, Indirapuram</string>
    <string name="content_from_book_package">New Gandhi Nagar Ghaziabad</string>
    <string name="fullName">Full Name</string>
    <string name="offline">You are Offline</string>
    <string name="some_problem_occured">Some problem occurred</string>
    <string name="permission_not_grant">Permission not granted</string>
    <string name="rupees">Rupees</string>
    <string name="create_profile">Create your profile</string>
    <string name="select_pickup_location">Please select pickup location</string>
    <string name="select_drop_location">Please select drop location</string>
    <string name="pickup_point">Pickup Point</string>
    <string name="pickup_point_colon">Pickup Point:</string>
    <string name="drop_point">Drop Point</string>
    <string name="drop_point_colon">Drop Point:</string>
    <string name="distance">Distance</string>
    <string name="fare">Ride Fare</string>
    <string name="service_start_date">Service Starting Date</string>
    <string name="pickup_address">Pickup Address</string>
    <string name="fare_of_ride">Fare of ride</string>
    <string name="select_service_starting_date">Select service starting date</string>
    <string name="select_going_timing">Select going time</string>
    <string name="select_coming_time">Select coming time</string>
    <string name="service_days">Service Days</string>
    <string name="select_days_for_service">Select Days for Service</string>
    <string name="select_days">Select days</string>
    <string name="click_on_buy_package">Click on buy package again</string>
    <string name="select_service_type">Select service type</string>
    <string name="submit">Submit</string>
    <string name="select_date_field">Select date field</string>
    <string name="going_time">Select going time</string>
    <string name="coming_time">Select coming time</string>
    <string name="proceed_to_pay">Proceed to pay</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="select_vehicle_type">select vehicle type</string>
    <string name="select_vehicle_type_capital">Select Vehicle Type</string>
    <string name="mobile">Mobile</string>
    <string name="email">Email</string>
    <string name="company_name">Company Name</string>
    <string name="select_service_type_capital">Select Service Type</string>
    <string name="transaction_complete">Transaction Successfully done!</string>
    <string name="connection_slow">connection is too slow</string>
    <string name="authentication_failed">Authentication Failed</string>
    <string name="webpage_not_load">webPage not load</string>
    <string name="dont_press_back_button">Please don\'t press back button</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="check_fare">Check Fare</string>
    <string name="buy_plan">Buy Plan</string>
    <string name="select_fare">Select fare</string>
    <string name="my_plans">My Plans</string>
    <string name="pending">Pending</string>
    <string name="order_number">Order Number</string>
    <string name="coupons">Coupons</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="status">Status</string>
    <string name="transaction_number">Transaction ID:</string>
    <string name="rate_us">Rate Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="apply_coupon">Apply Coupon</string>
    <string name="coupon">Coupon</string>
    <string name="apply">Apply</string>
    <string name="enter_coupon_code">Enter Coupon Code</string>
    <string name="enter_coupon">Enter coupon code</string>

</resources>
