<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/title_home" />
        <item
            android:id="@+id/navigation_fare_calci"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/calculator" />
        <item
            android:id="@+id/navigation_profile"
            android:icon="@drawable/ic_person_black"
            android:title="@string/profile" />
        <item
            android:id="@+id/navigation_my_plan"
            android:icon="@drawable/ic_my_plan"
            android:title="@string/my_plans" />
        <item
            android:id="@+id/navigation_coupon"
            android:icon="@drawable/ic_my_plan"
            android:title="@string/coupons" />

    </group>

  <!--  <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_dashboard_black_24dp"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>-->

</menu>
