<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_151sdp"
    app:cardCornerRadius="@dimen/_3sdp"
    tool:ignore="ContentDescription">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_5sdp">


        <EditText
            android:id="@+id/et_coupon_code"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_margin="@dimen/_16sdp"
            android:gravity="center"
            android:hint="@string/enter_coupon_code"
            android:textColor="@color/black_color"
            android:textColorHint="@color/black_color" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_margin="@dimen/_12sdp">

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:layout_weight="1"
                android:background="@color/blue_color"
                android:text="@string/cancel"
                android:textColor="@color/white_color" />

            <Button
                android:id="@+id/btn_apply"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:layout_weight="1"
                android:background="@color/blue_color"
                android:text="@string/apply"
                android:textColor="@color/white_color" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
