<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fitsSystemWindows="true"
    tools:context="com.travel.cab.service.activity.PhoneLogin">

    <LinearLayout
        android:id="@+id/linear_layout_otp_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="220dp"
            android:layout_height="220dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/img_number_verification" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verify_your_number"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
            android:textColor="@color/grey_80"
            android:textStyle="bold" />

        <TextView
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:gravity="center"
            android:text="@string/please_enter_your_mobile_number_to_receive_a_verification_code"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
            android:textColor="@color/grey_60" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="@dimen/spacing_large"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:maxLines="1"
                android:singleLine="true"
                android:text="+91"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                android:textColor="@color/grey_80" />

            <View
                android:layout_width="@dimen/spacing_medium"
                android:layout_height="0dp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789"
                android:hint="Phone Number"
                android:inputType="phone"
                android:maxLength="10"
                android:maxLines="1"
                android:singleLine="true"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textColor="@color/grey_90"
                android:textStyle="bold">

                <requestFocus />

            </com.google.android.material.textfield.TextInputEditText>

        </LinearLayout>

        <Button
            android:id="@+id/btn_send_otp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_rounded_red"
            android:text="@string/continue_button"
            android:textColor="@android:color/white" />


    </LinearLayout>

    <ProgressBar
        android:id="@+id/show_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_layout_otp_send"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/spacing_16"
        android:indeterminate="true"
        android:visibility="gone" />
</RelativeLayout>